kubernetes/base/nfs-server/calico-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-nfs-server
spec:
  selector: app == 'nfs-server'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 2049
          - 111
